ajout target_blank

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
-                        <a class="nav-link active" aria-current="page" href="#about">Moi</a>
-                        <a class="nav-link" href="#aboutMe">à propos de moi </a>
+                        <a class="nav-link active" aria-current="page" href="#about">Moi</a>                  
+                        <a class="nav-link " href="#aboutMe">à propos de moi </a>
                         <a class="nav-link" href="#skills">Competences</a>
                         <a class="nav-link" href="#experience">Expériences</a>
                         <a class="nav-link" href="#education">Formation</a>
@@ -39,7 +39,7 @@
             <div class="heading">
                 <h1>Hello ! c'est moi, Evan !</h1>
                 <h3>Développeur Web</h3>
-                <a href="./images/Evan-1.pdf" class="button1">Télécharger CV</a>
+                <a href="./images/Evan-1.pdf" target="_blank" class="button1">Télécharger CV</a>
            </div>
         </section>
 
