--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="heading">
                 <h1>Hello ! c'est moi, Evan !</h1>
                 <h3>Développeur Web</h3>
-                <a href="./images/Evan-1.pdf" target="_blank" class="button1">Télécharger CV</a>
+                <a href="./images/Evan.pdf" target="_blank" class="button1">Télécharger CV</a>
            </div>
         </section>
 
@@ -48,7 +48,7 @@
             <div class="heading ">
                 <h2>À propos de moi</h2>
             </div>
-            <p>Plombier-chauffagiste depuis 13 ans, je suis à la recherche aujourd'hui de nouveaux défis qui me correspondent. La reconversion professionnelle comme développeur web s'accorde parfaitement avec mes passions pour le numérique et les jeux-vidéos. Je suis curieux et désireux d'apprendre de nouvelles connaissances et de me perfectionner dans celles que j'ai déjà.
+            <p>Passionné de numérique et de jeux-vidéos, je suis curieux d'apprendre de nouvelles connaissances et de me perfectionner dans celles que j'ai déjà. J'ai donc décidé, après une formation découverte avec UDEMY, de me reconvertir comme développeur web. A l'origine plombier-chauffagiste, je ne me retrouvait plus dans ce métier pratiquer pendant plus de dix ans. À l'issue de la formation chez O'clock je suis à la recherche d'un poste de développeur web junior ou d'un stage en entreprise afin d'approfondir et de mettre à profit les nouvelles compétences acquises.
             </p>
         </section>
 
