modification de l'experience et rajout symfo plus laravel

--- a/index.html
+++ b/index.html
@@ -71,10 +71,13 @@
                     <img src="./images/php-logo.png" class="img-fluid bigImg ">
                 </div>
                 <div class="col-md-2 d-flex justify-content-center">
-                    <img src="./images/SQL-logo.png" class="img-fluid bigImg ">
+                    <img src="./images/mysql.jpg" class="img-fluid bigImg ">
                 </div>
                 <div class="col-md-2 d-flex justify-content-center">
-                    <img src="./images/mysql.jpg" class="img-fluid bigImg ">
+                    <img src="./images/symfony_logo_vertical.png" class="img-fluid bigImg ">
+                </div>
+                <div class="col-md-12 d-flex justify-content-center">
+                    <img src="./images/laravel.png" class="img-fluid bigImg mono ">
                 </div>
             </div>
         </section>
