--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
 
         <section id="aboutMe" >
             <div class="divider white"></div>
-            <div class="heading ">
-                <h2>À propos de moi</h2>
-            </div>
+            <h2 class="heading text-white ">À propos de moi</h2>
             <p>Passionné de numérique et de jeux-vidéos, je suis curieux d'apprendre de nouvelles connaissances et de me perfectionner dans celles que j'ai déjà. J'ai donc décidé, après une formation découverte avec UDEMY, de me reconvertir comme développeur web. A l'origine plombier-chauffagiste, je ne me retrouvait plus dans ce métier pratiquer pendant plus de dix ans. À l'issue de la formation chez O'clock je suis à la recherche d'un poste de développeur web junior ou d'un stage en entreprise afin d'approfondir et de mettre à profit les nouvelles compétences acquises.
             </p>
         </section>
@@ -55,7 +53,7 @@
         <section id="skills">
             <div class="divider"></div>
             <div class="heading">
-                <h2>Compétences</h2>
+                <h2 class="heading">Compétences</h2>
            </div>
            <div class="container-fluid row ">
                 <div class="col-md-2 d-flex justify-content-center ">
