--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div class="heading">
                 <h1>Hello ! c'est moi, Evan !</h1>
                 <h3>Développeur Web</h3>
-                <a href="./images/Evan.pdf" target="_blank" class="button1">Télécharger CV</a>
+                <a href="./images/CVEvan.pdf" target="_blank" class="button1">Télécharger CV</a>
            </div>
         </section>
 
