--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <section id="aboutMe" >
             <div class="divider white"></div>
             <h2 class="heading text-white ">À propos de moi</h2>
-            <p>Passionné de numérique et de jeux-vidéos, je suis curieux d'apprendre de nouvelles connaissances et de me perfectionner dans celles que j'ai déjà. J'ai donc décidé, après une formation découverte avec UDEMY, de me reconvertir comme développeur web. A l'origine plombier-chauffagiste, je ne me retrouvait plus dans ce métier pratiquer pendant plus de dix ans. À l'issue de la formation chez O'clock je suis à la recherche d'un poste de développeur web junior ou d'un stage en entreprise afin d'approfondir et de mettre à profit les nouvelles compétences acquises.
+            <p>Passionné de numérique et de jeux vidéo, je suis curieux d'apprendre de nouvelles connaissances et de me perfectionner dans celles que j'ai déjà. J'ai donc décidé, après une formation découverte avec UDEMY, de me reconvertir comme développeur web. À l'origine plombier-chauffagiste, je ne me retrouvais plus dans ce métier pratiquer pendant plus de dix ans. À l'issue de la formation chez O'clock, j'ai effectué un stage en tant que Développeur FullStack pour des modules Prestashop. Je suis maintenant à la recherche d'un poste en tant que Développeur Web Junior.
             </p>
         </section>
 
