--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <div class="timeline-panel">
                             <div class="timeline-heading">
                                 <h4>Développeur Web Formation</h4>
-                                <p><span class="bi-clock-fill"></span> Février 2023 </p>
+                                <p><span class="bi-clock-fill"></span> Février 2023 - Aout 2023 </p>
                             </div>
                             <div class="timeline-body">
                                 <p>Formation chez O'Clock en Développement Web. Plusieurs projets en équipe avec HTML, CSS, Javascript et PHP.</p>
