--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                                 <p><span class="bi-clock-fill"></span> Février 2023 - Aout 2023 </p>
                             </div>
                             <div class="timeline-body">
-                                <p>Formation chez O'Clock en Développement Web. Plusieurs projets en équipe avec HTML, CSS, Javascript et PHP.</p>
+                                <p>Formation chez O'Clock en Développement Web. Plusieurs projets en équipe avec HTML, CSS, Javascript , PHP Symfony et Laravel.</p>
                             </div>
                         </div>
                     </li>
